test/scc/ext/tm/semantic-errors/007.a
007.t:5:9: error: volatile objects cannot be used within _Atomic block